--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="sidebar">
             <div class="container">
                 <div class="title">
-                    <h1>#everydays</h1>
+                    <h1>#uiuxeverydays</h1>
                     <h2>designed & coded by zahinz</h2>
                 </div>
                 <div class="details">
