add button at sidebar and add links

--- a/index.html
+++ b/index.html
@@ -31,19 +31,24 @@
                 <div class="details">
                     <ul>
                         <li>#1</li>
-                        <li>Dribble hover card</li>
-                        <li>19 Sept 2021</li>
-                        <li>HTML & CSS</li>
+                        <li><span class="subtitle-span">Inspiration</span><br><a href="https://dribbble.com/" target="blank">Dribble hover card</a></li>
+                        <li><span class="subtitle-span">Date</span><br>19 Sept 2021</li>
+                        <li><span class="subtitle-span">Technology</span><br>HTML & CSS</li>
                     </ul>
                 </div>
+                <div class="view-github">
+                    <div class="btn-solid">
+                        <a href="https://github.com/zahinz/uiuxeverydays-dribblecard" target="blank">View code repository</a>
+                    </div>
+                </div>
                 <div class="socials">
-                    <a href="http://">
+                    <a href="https://github.com/zahinz" target="blank">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="http://">
+                    <a href="https://twitter.com/ZahinZulkipli" target="blank">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="http://">
+                    <a href="https://www.instagram.com/zahinzulkipli/?hl=en" target="blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
